test/valid-non-implemented/56332_min_elem_of_array/min_elem_of_array.agu
-- Author: 56332, Student Ricardo Sobral

let minArray(a): Int[] -> Int =
    let i: Int = 1;
    let min: Int = a[0];
    while i < length(a) do (
        if a[i] < min then set min = a[i];
        set i = i + 1
    );
    min

let arr: Int[] = new Int[6 | 0];
set arr[0] = 0;
set arr[1] = -1;
set arr[2] = 10;
set arr[3] = 0;
set arr[4] = -50;
set arr[5] = 100;

let _ : Unit = print(minArray(arr))
