test/invalid-semantic/56332_missing_function_argument/missing_function_argument.agu
-- Author: 56332, Student Ricardo Sobral
let add (n, m) : (Int, Int) -> Int = n + m
let result : Int = add(5)  -- Erro semântico: argumentos insuficientes
